[package]
name = "orama-tensor"
version = "0.1.0"
edition = "2021"

[dependencies]
num-traits = "0.2.18"
rand = { version = "0.9.0-alpha.0", optional = true }
rand_distr = { version = "0.5.0-alpha.0", optional = true }

[features]
random = ["dep:rand", "dep:rand_distr"]

[dev-dependencies]
approx = "0.5.1"
rand_chacha = "0.9.0-alpha.0"
